--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -3,27 +3,21 @@
     border: solid 1px;
     vertical-align: middle;
   }
-  .sheet .foodanddrinks .label {
-    font-size: 12pt;
-  }
+
 </style>
-<table>
-  <tr>
-    <td>
+<table><tr><td>
+<div style="width:90%;float:left;">
       <table class="foodanddrinks">
         {{#each foodAnddrinks as |item id|}}
         <tr>
           <td>
-            <span class="label" style="margin-right: 5px">
+            <span class="label">
               {{ item.name }} ({{ system.quantity }})
             </span>
           </td>
 
           <td>
-            {{{ item.system.description }}}
-          </td>
-
-          <td>
+            {{{ item.system.description }}}</td><td>
             <li class="item flexrow" data-item-id="{{ item._id }}">
               <div class="item-controls">
                 <a
@@ -34,7 +28,6 @@
                   <i class="fas fa-trash"></i>
                 </a>
                 <a
-                  style="float: right; margin-right: 10px"
                   class="item-control"
                   data-edit
                   data-item-id="{{ item._id }}"
@@ -48,6 +41,37 @@
         </tr>
         {{/each}}
       </table>
-    </td>
-  </tr>
+	</td><td><div>
+      <table class="foodanddrinks" >
+        {{#each junk as |item id|}}
+        <tr>
+          <td>{{ item.name }}</td><td>{{system.junk.type1}} ({{ system.junk.quantity1 }}),{{system.junk.type2}} ({{system.junk.quantity2}})</td>
+          <td >
+            <li class="item flexrow" data-item-id="{{ item._id }}">
+              <div class="item-controls">
+			   <a
+                  class="item-control"
+                  data-edit
+                  data-item-id="{{ item._id }}"
+                  title="{{localize 'DOCUMENT.Update' type='item'}}"
+                >
+                  <i class="fas fa-edit"></i>
+                </a>
+                <a
+				  style="float:right;"				
+                  class="item-control item-delete"
+                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
+                >
+                  <i class="fas fa-trash"></i>
+                </a>
+
+              </div>
+            </li>
+          </td>
+        </tr>
+        {{/each}}
+      </table>
+</div>
+</td>
+</tr>
 </table>
