--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -60,8 +60,8 @@
 		<tr class="collapsible-content" data-collapsible-content="true" data-item-id="ammo">
 		<td>
             {{#each ammos as |item id|}}
-			<div data-item-id="{{item._id}}" style="float:left;width:25%;">			
-                <div style="width:100%;border:solid 1px;padding:10px 10px 10px 10px" class='item flexrow' data-item-id='{{item._id}}'>
+			<div data-item-id="{{item._id}}">			
+                <div class='item flexrow' data-item-id='{{item._id}}'>
                     <div class='item-controls' style="display:block;margin:auto;">
                         <a style="float:right;" class='item-control item-delete' data-item-id="{{item._id}}" title='{{localize "DOCUMENT.Delete" type="item"}}'>
                             <i class='fas fa-trash'></i>
@@ -78,10 +78,11 @@
     </tr>
 </table>
 
+<table><tr><td>
 	        <!-- Ranged Weapons Slot -->			
             {{#each rangedWeapons as |item id|}}
-            <div style="width:48%;display:block;float:left;margin-left:2%;" class='item flexrow' data-item-id='{{item._id}}'>
-                <table class="weapontable" style="border:solid 1px;">
+            <div class='item flexrow weapons-div' data-item-id='{{item._id}}'>
+                <table class="weapons-table">
                     <tr>
                         <td>
                             <button class="collapsible allcaps" data-collapsible="true" data-item-id="{{item._id}}">{{item.name}}</button>
@@ -198,16 +199,18 @@
                 </table>
             </div>
             {{/each}}
+			
+			</td><td>
             <!-- MeleeWeapons Slot -->
             {{#each meleeWeapons as |item id|}}
-		<div style="width:48%;display:block;float:left;margin-left:2%;" class='item flexrow' data-item-id='{{item._id}}'>
-                <table class="weapontable" style="border:solid 1px;">
+		<div class='item flexrow weapons-div' data-item-id='{{item._id}}'>
+                <table class="weapons-table">
                     <tr>
                         <td>
                             <button class="collapsible allcaps" data-collapsible="true" data-item-id="{{item._id}}">{{item.name}}</button>
                         </td>
                     </tr>
-                    <tr style="display:table-row;" class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
+                    <tr class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
                         <td>
                             <table class="equipped-stats">
                                 <tr>
@@ -260,3 +263,4 @@
                 </table>
             </div>
                 {{/each}}
+</td></tr></table>
