--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -6,7 +6,7 @@
         <td>
           <h3>{{ item.name }}</h3>
           <div class="perk-div"><img class="perk-image" src="{{ item.img }}" /></div>
-          Qty: {{ system.perk - level.value }}
+          Qty: 
         </td>
       </tr>
       <tr>
