--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -5,29 +5,21 @@
   }
 
 </style>
-<table><tr><td>
-<div style="width:90%;float:left;">
+<table class="backpack"><tr><td>
       <table class="foodanddrinks">
         {{#each foodAnddrinks as |item id|}}
         <tr>
-          <td>
+          <td style="width:100px;>
             <span class="label">
               {{ item.name }} ({{ system.quantity }})
             </span>
           </td>
 
           <td>
-            {{{ item.system.description }}}</td><td>
+            {{{ item.system.description }}}</td><td class="td-controls">
             <li class="item flexrow" data-item-id="{{ item._id }}">
               <div class="item-controls">
-                <a
-                  style="float: right; margin-right: 10px"
-                  class="item-control item-delete"
-                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
-                >
-                  <i class="fas fa-trash"></i>
-                </a>
-                <a
+				<a
                   class="item-control"
                   data-edit
                   data-item-id="{{ item._id }}"
@@ -35,13 +27,21 @@
                 >
                   <i class="fas fa-edit"></i>
                 </a>
+                <a
+                  
+                  class="item-control item-delete"
+                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
+                >
+                  <i class="fas fa-trash"></i>
+                </a>
+ 
               </div>
             </li>
           </td>
         </tr>
         {{/each}}
       </table>
-	</td><td><div>
+	</td><td class="spacer"></td><td><div>
       <table class="foodanddrinks" >
         {{#each junk as |item id|}}
         <tr>
@@ -51,7 +51,7 @@
 		  {{system.junk.type2}} ({{system.junk.quantity2}}) 
 		  {{system.junk.type3}} ({{system.junk.quantity3}})
 		  </td>
-          <td >
+          <td class="td-controls">
             <li class="item flexrow" data-item-id="{{ item._id }}">
               <div class="item-controls">
 			   <a
