--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -1,5 +1,5 @@
 {{#each perks as |item id|}}
-<div style="width: 49%; float: left; display: block">
+<div style="width: 49%;float:left;">
   <li class="item flexrow" data-item-id="{{ item._id }}">
     <table class="perk-table" style="border: solid 1px">
       <tr>
