--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -572,3 +572,16 @@ table,tr,td, .sheet img{
 	border:none;
 	width:10px;
 }
+
+.sheet .karmaCap input[type="checkbox"] {
+    content: url('/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp');
+    appearance: none;
+    display: block;
+    width: 50px;
+    height: 50px;
+	border:none;
+}
+
+.sheet .karmaCap input[type="checkbox"]:checked {
+    content: url('/systems/arcane-arcade-fallout/assets/Cap_Back_Facing.webp');
+}
