Cap Flips Updated

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -225,7 +225,7 @@
                             <table class="current-caps">
                               <tr>
 				<td colspan=999 class="karmaCap">
-					<input type="checkbox" name="karmaCapflipped" {{checked karmaCapflipped}} />
+					<input type="checkbox" name="system.karmaCapflipped" {{checked system.karmaCapflipped}} />
 				</td>
                               </tr>
                             </table>
