--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -51,7 +51,11 @@
             <input type="number" name="system.combatSequence" value="{{ system.combatSequence }}" />
           </td>
           <td>
-            <input type="number" name="system.npcPassivesense" value="{{ system.npcPassivesense }}" />
+            <input
+              type="number"
+              name="system.npcPassivesense"
+              value="{{ system.npcPassivesense }}"
+            />
           </td>
         </tr>
         <tr>
