--- a/templates/item/parts/armor-upgrades.hbs
+++ b/templates/item/parts/armor-upgrades.hbs
@@ -46,7 +46,7 @@
         <a
           class="effect-control"
           data-action="delete"
-          title="{{localize 'DOCUMENT.Delete' type="Effect"}}"
+          title="{{localize 'DOCUMENT.Delete' type='Effect'}}"
         >
           <i class="fas fa-trash"></i>
         </a>
