--- a/templates/item/parts/armor-upgrades.hbs
+++ b/templates/item/parts/armor-upgrades.hbs
@@ -39,7 +39,7 @@
         <a
           class="effect-control"
           data-action="edit"
-          title="{{localize 'DOCUMENT.Update' type='Effect'}}"
+          title="{{localize 'DOCUMENT.Update' type="Effect"}}"
         >
           <i class="fas fa-edit"></i>
         </a>
