--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -32,6 +32,7 @@
                     </td>
                   </tr>
                   <tr>
+                  <test>
                     <td class="bio-label"><span class="label">XP:</span></td>
                     <td>
                       <input id="xp" type="number" name="system.xp" value="{{ system.xp }}" />
