--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -162,12 +162,12 @@
                         </tr>
                         <tr>
                           <td>
-                            <button data-recycle-ap>
+                            <button data-recycle-ap title="Refresh AP During Combat">
                               <i class="fa-solid fa-recycle"></i>
                             </button>
                           </td>
                           <td>
-                            <button data-refill-ap>
+                            <button data-refill-ap title="Refresh AP Outside of Combat">
                               <i class="fa-regular fa-arrow-up-right-dots"></i>
                             </button>
                           </td>
