Skills Field Update
Negative Values weren't working

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -9,7 +9,7 @@
         </button>
       </td>
     </tr>
-    <tr class="collapsible-content" data-collapsible-content="true" data-item-id="{{ item._id }}">
+	<details><tr class="collapsible-content" data-collapsible-content="true" data-item-id="{{ item._id }}">
       <td>
         <table class="equipped-stats">
           <tr>
@@ -50,6 +50,7 @@
         </div>
       </td>
     </tr>
+	</details>
   </table>
 </div>
 {{/each}}
