--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -9,18 +9,30 @@
         </td>
       </tr>
       <tr>
-        <td><summary><details>{{{ item.system.description }}}</details></summary></td>
+        <td><details>{{{ item.system.description }}}</details></td>
       </tr>
       <tr>
         <td style="text-align: right; padding-right: 5px">
-          <div class="item-controls">
-            <a class="item-control item-edit" title="{{localize 'DOCUMENT.Update' type='perk'}}"
-              ><i class="fas fa-edit"></i
-            ></a>
-            <a class="item-control item-delete" title="{{localize 'DOCUMENT.Delete' type='perk'}}"
-              ><i class="fas fa-trash"></i
-            ></a>
-          </div>
+           <li class="item flexrow" data-item-id="{{ item._id }}">
+              <div class="item-controls">
+                <a
+                  style="float: right; margin-right: 10px"
+                  class="item-control item-delete"
+                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
+                >
+                  <i class="fas fa-trash"></i>
+                </a>
+                <a
+                  style="float: right; margin-right: 10px"
+                  class="item-control"
+                  data-edit
+                  data-item-id="{{ item._id }}"
+                  title="{{localize 'DOCUMENT.Update' type='item'}}"
+                >
+                  <i class="fas fa-edit"></i>
+                </a>
+              </div>
+            </li>
         </td>
       </tr>
     </table>
@@ -44,14 +56,26 @@
       </tr>
       <tr>
         <td style="text-align: right; padding-right: 5px">
-          <div class="item-controls">
-            <a class="item-control item-edit" title="{{localize 'DOCUMENT.Update' type='perk'}}"
-              ><i class="fas fa-edit"></i
-            ></a>
-            <a class="item-control item-delete" title="{{localize 'DOCUMENT.Delete' type='perk'}}"
-              ><i class="fas fa-trash"></i
-            ></a>
-          </div>
+            <li class="item flexrow" data-item-id="{{ item._id }}">
+              <div class="item-controls">
+                <a
+                  style="float: right; margin-right: 10px"
+                  class="item-control item-delete"
+                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
+                >
+                  <i class="fas fa-trash"></i>
+                </a>
+                <a
+                  style="float: right; margin-right: 10px"
+                  class="item-control"
+                  data-edit
+                  data-item-id="{{ item._id }}"
+                  title="{{localize 'DOCUMENT.Update' type='item'}}"
+                >
+                  <i class="fas fa-edit"></i>
+                </a>
+              </div>
+            </li>
         </td>
       </tr>
     </table>
