--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -222,8 +222,7 @@
                                 <td>
                                   <input
                                     id="modifycaps"
-                                    class="modify"
-                                    onchange="updatecaps(this.value)"
+                                    class="modifycaps"
                                     value=""
                                     placeholder="modify"
                                     type="number"
