--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -223,48 +223,16 @@
           </table>
         </form>
       </div>
-	  
     </header>
-	<table style="margin-top:-40px;">
-	  <tr>
-		<td colspan="999" class="karmaCap">
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped"
-			{{checked
-			system.karmaCapflipped}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped2"
-			{{checked
-			system.karmaCapflipped2}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped3"
-			{{checked
-			system.karmaCapflipped3}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped4"
-			{{checked
-			system.karmaCapflipped4}}
-		  /><input
-			type="checkbox"
-			name="system.karmaCapflipped5"
-			{{checked
-			system.karmaCapflipped5}}
-		  /><input
-			type="checkbox"
-			name="system.karmaCapflipped6"
-			{{checked
-			system.karmaCapflipped6}}
-		  />								  
-		</td>
-	  </tr>
-	</table>
+    <table style="margin-top: -40px">
+      <tr>
+        <td colspan="999" class="karmaCap">
+          {{#each system.karmaCaps.flipped as |flipped| }}
+          <input type="checkbox" name="system.karmaCaps.flipped[{{@index}}]" {{checked flipped}} />
+          {{/each}}
+        </td>
+      </tr>
+    </table>
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
       {{!-- Default tab is specified in actor-sheet.mjs --}}
