--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -595,7 +595,8 @@ td,
 }
 
 .sheet .karmaCap input[type='checkbox'] {
-  content: url('/systems/arcane-arcade-fallout/assets/Cap_Back_Facing.webp');
+  content: url('/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp');
+  cursor: pointer;
   appearance: none;
   display: block;
   width: 50px;
@@ -604,7 +605,7 @@ td,
 }
 
 .sheet .karmaCap input[type='checkbox']:checked {
-  content: url('/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp');
+  content: url('/systems/arcane-arcade-fallout/assets/Cap_Back_Facing.webp');
 }
 .htmlfield {
   padding: 20px;
